force-app/main/default/objects/DealHistory__c/DealHistory__c.object-meta.xml
<CustomObject>
    <description>List of deals made by a dealer with a person</description>
    <label>Deal History</label>
    <nameField>
        <displayFormat>DHIST{000000}</displayFormat>
        <label>Deal History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>