force-app/main/default/objects/DealHistory__c/fields/BookValue__c.field-meta.xml
<CustomField>
    <fullName>BookValue__c</fullName>
    <label>Book Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>