force-app/main/default/objects/DealHistory__c/fields/DealDate__c.field-meta.xml
<CustomField>
    <fullName>DealDate__c</fullName>
    <label>Deal Date</label>
    <type>Date</type>
</CustomField>