force-app/main/default/objects/DealHistory__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dealer who made this deal</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal History</relationshipLabel>
    <relationshipName>Deal_History</relationshipName>
    <type>Lookup</type>
</CustomField>