force-app/main/default/objects/DealHistory__c/fields/DealNumber__c.field-meta.xml
<CustomField>
    <fullName>DealNumber__c</fullName>
    <label>Deal Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>