force-app/main/default/objects/DealHistory__c/fields/DealStory__c.field-meta.xml
<CustomField>
    <fullName>DealStory__c</fullName>
    <label>Deal Story</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defector Alert</fullName>
            </value>
            <value>
                <fullName>Equity - Service Appointment Soon</fullName>
            </value>
            <value>
                <fullName>Equity – Higher Payment</fullName>
            </value>
            <value>
                <fullName>Equity – Lower Payment</fullName>
            </value>
            <value>
                <fullName>Equity – Similar Payment</fullName>
            </value>
            <value>
                <fullName>Likely In Market</fullName>
            </value>
            <value>
                <fullName>Near Term Lease</fullName>
            </value>
            <value>
                <fullName>Over Lease Mileage</fullName>
            </value>
            <value>
                <fullName>Positive Equity</fullName>
            </value>
            <value>
                <fullName>Replacement Deal</fullName>
            </value>
            <value>
                <fullName>Service Defector Alert</fullName>
            </value>
            <value>
                <fullName>Likely Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>