force-app/main/default/objects/DealHistory__c/fields/EquityClass__c.field-meta.xml
<CustomField>
    <fullName>EquityClass__c</fullName>
    <label>Equity Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete Information</fullName>
            </value>
            <value>
                <fullName>Expired Soft Credit</fullName>
            </value>
            <value>
                <fullName>Service Not Sold</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pending Appraisal</fullName>
            </value>
            <value>
                <fullName>New to New</fullName>
            </value>
            <value>
                <fullName>Class 2</fullName>
            </value>
            <value>
                <fullName>Used to New</fullName>
            </value>
            <value>
                <fullName>Used to Used</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Retail Balloon</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Less Marketable</fullName>
            </value>
            <value>
                <fullName>Traded</fullName>
            </value>
            <value>
                <fullName>Full Term Lease</fullName>
            </value>
            <value>
                <fullName>Full Term Balloon</fullName>
            </value>
            <value>
                <fullName>Outside Finance</fullName>
            </value>
            <value>
                <fullName>Near Term Lease</fullName>
            </value>
            <value>
                <fullName>Near Term Balloon</fullName>
            </value>
            <value>
                <fullName>Retail to Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>