force-app/main/default/objects/DealHistory__c/fields/EstimatedMileage__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMileage__c</fullName>
    <label>Estimated Mileage</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>