force-app/main/default/objects/DealHistory__c/fields/EstimatedMileageSinceLastTransaction__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMileageSinceLastTransaction__c</fullName>
    <label>Estimated Mileage Since Last Transaction</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>