force-app/main/default/objects/DealHistory__c/fields/EstimatedPaymentChange__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPaymentChange__c</fullName>
    <inlineHelpText>Difference between future and current payment</inlineHelpText>
    <label>Estimated Payment Change</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>