force-app/main/default/objects/DealHistory__c/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <label>Interest Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>