force-app/main/default/objects/DealHistory__c/fields/LeaseAnnualMiles__c.field-meta.xml
<CustomField>
    <fullName>LeaseAnnualMiles__c</fullName>
    <label>Lease Annual Miles</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>