force-app/main/default/objects/DealHistory__c/fields/NewUsed__c.field-meta.xml
<CustomField>
    <fullName>NewUsed__c</fullName>
    <label>New or Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>