force-app/main/default/objects/DealHistory__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person involved with this deal</inlineHelpText>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal History</relationshipLabel>
    <relationshipName>Deal_History</relationshipName>
    <type>Lookup</type>
</CustomField>