force-app/main/default/objects/DealHistory__c/fields/RetailLease__c.field-meta.xml
<CustomField>
    <fullName>RetailLease__c</fullName>
    <inlineHelpText>Whether the deal was Retail or Lease</inlineHelpText>
    <label>Retail or Lease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>