force-app/main/default/objects/DealHistory__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <inlineHelpText>Number of Months</inlineHelpText>
    <label>Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>