force-app/main/default/objects/DealHistory__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Vehicle sold or leased in this deal</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Vehicles__c</referenceTo>
    <relationshipLabel>Deal History</relationshipLabel>
    <relationshipName>Deal_History</relationshipName>
    <type>Lookup</type>
</CustomField>